Fix navbar overlap: show email only on 1500px+ screens
Made-with: Cursor

--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -63,9 +63,6 @@
   }
 }
 @media only screen and (min-width: 900px) {
-  .navbar-connect {
-    display: block;
-  }
   .header ul {
     column-gap: 25px;
     font-size: 13px;
@@ -79,14 +76,21 @@
     column-gap: 40px;
     font-size: 14px;
   }
-  .navbar-connect {
-    font-size: 15px;
-  }
   .navbar-title {
     font-size: 18px;
   }
 }
-@media only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1500px) {
+  .navbar-connect {
+    display: block;
+    font-size: 15px;
+  }
+  .header ul {
+    column-gap: 45px;
+    font-size: 15px;
+  }
+}
+@media only screen and (min-width: 1800px) {
   .header ul {
     column-gap: 55px;
     font-size: 16px;
